--- a/postman/Starling Env Apple.postman_environment.json
+++ b/postman/Starling Env Apple.postman_environment.json
@@ -19,9 +19,19 @@
 			"value": "766b2af6-3f21-41cb-b969-f2165b0c214b",
 			"type": "default",
 			"enabled": true
+		},
+		{
+			"key": "minTransactionTimestamp",
+			"value": "2022-02-05T00:00:00.000Z",
+			"enabled": true
+		},
+		{
+			"key": "maxTransactionTimestamp",
+			"value": "2022-02-12T00:00:00.000Z",
+			"enabled": true
 		}
 	],
 	"_postman_variable_scope": "environment",
-	"_postman_exported_at": "2022-02-12T16:42:54.568Z",
+	"_postman_exported_at": "2022-02-12T17:36:26.449Z",
 	"_postman_exported_using": "Postman/9.13.1"
 }
