--- a/postman/Starling Env Apple.postman_environment.json
+++ b/postman/Starling Env Apple.postman_environment.json
@@ -4,19 +4,19 @@
 	"values": [
 		{
 			"key": "accountUid",
-			"value": "1db3f775-36e3-4e9f-bc9b-582cde60017f",
+			"value": "<<ACCOUNT_UID>>",
 			"type": "default",
 			"enabled": true
 		},
 		{
 			"key": "categoryUid",
-			"value": "a91aca14-7f4b-49da-bfbf-c451e03b9c5b",
+			"value": "<<CATEGORY_UID>>",
 			"type": "default",
 			"enabled": true
 		},
 		{
 			"key": "savingsGoalUid",
-			"value": "766b2af6-3f21-41cb-b969-f2165b0c214b",
+			"value": "<<SAVINGS_GOAL_UID>>",
 			"type": "default",
 			"enabled": true
 		},
